src/yini_test/cases/golden/strict/valid/booleans-and-null/boolean-true-uppercase.strict.yini
@yini strict

^ Values
enabled = TRUE
disabled = FALSE

/END

