src/yini_test/cases/golden/strict/invalid/booleans-and-null/blank-value-as-null.strict.yini
@yini strict

^ Values
key =

/END

